fix: form vertical alignment fix

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -45,18 +45,11 @@
   --background-main: #F5F5F5;
   --background-form: #fff;
 
-  height: 100vh;
-  width: 100%;
-
   color: rgba(0, 0, 0, 0.88);
 }
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1.25;
-}
-
-#root, main {
-  height: 100%;
 }
 
 .ant-input::-webkit-input-placeholder, .ant-input-password input::-webkit-input-placeholder {
